remove resume file

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <p><strong>Software Trainer & Web Developer.</strong> I train students and professionals in programming and web technologies, and build responsive, interactive web applications using HTML, CSS, JavaScript, Python, and Java.</p>
 
       <div class="btn-row">
-        <a class="btn primary" href="desktop/port new/resume me.pdf" download>Download CV</a>
+        <a class="btn primary" href="resume me.pdf" download>Download CV</a>
         <a class="btn" href="#contact">Contact</a>
       </div>
 
